# midterm_project

./: .gitattributes  CMakeLists.txt  LICENSE.txt  README.md  readme.md
app/: CMakeLists.txt  distance.cpp  face.cpp  main.cpp
cpp_check_lint_logs/: cpp_lint.txt  cppcheck.txt
documentation/: Doxyfile
documentation/html/: dir_d422163b96683743ed3963d4aac17747.html  distance_8cpp.html  distance_8cpp__incl.map  distance_8cpp__incl.md5  distance_8cpp_source.html  face_8cpp.html  face_8cpp__incl.map  face_8cpp__incl.md5  face_8cpp_source.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  main_8cpp_source.html
documentation/html/search/: files_1.js  searchdata.js
documentation/latex/: dir_d422163b96683743ed3963d4aac17747.tex  distance_8cpp.tex  distance_8cpp__incl.md5  face_8cpp.tex  face_8cpp__incl.md5  files.tex  main_8cpp.tex  main_8cpp__incl.md5  refman.tex
include/: distance.hpp  face.hpp
include/dlib/geometry/: rectangle.h
include/opencv/include/opencv4/opencv2/: cvconfig.h
include/opencv/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
test/: CMakeLists.txt  Gmock.h  face.h  main.cpp  test.cpp
